--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                             <li><a href="https://turkyyassin.github.io/About/">About</a></li>
                             <li><a href="#">Contact</a></li>
                             <li><a href="#">Pricing</a></li>
-                            <li><a href="#">Why Choose Us</a></li>
+                            <li><a href="https://turkyyassin.github.io/WHY-CHOOSE-US/">Why Choose Us</a></li>
                         </ul>
                     </li>
                 </ul>
