--- a/index.html
+++ b/index.html
@@ -30,8 +30,21 @@
                     <li><a class="h" href="https://turkyyassin.github.io/New-folder/">Home</a></li>
                     <li><a href="#Courses">Courses<span><i class="fa-solid fa-angle-down"></i></span></a>
                         <ul class="dropdown">
-                            <li><a href="#">Quran Courses</a></li>
-                            <li><a href="#">Arabic Courses</a></li>
+                            <li class="q"><a href="#">Quran Courses</a>
+                                <ul class="drop">
+                                    <li><a href="#">Quran Reading</a></li>
+                                    <li><a href="#">Noor Al Bayan</a></li>
+                                    <li><a href="#">Quran Reading</a></li>
+                                    <li><a href="#">Rules of Tajweed</a></li>
+                                    <li><a href="#">Quran Memorization</a></li>
+                                </ul>
+                            </li>
+                            <li class="q"><a href="#">Arabic Courses</a>
+                                <ul class="drop">
+                                    <li><a href="#">Classical Arabic</a></li>
+                                    <li><a href="#">Arabic Alphabet</a></li>
+                                </ul>
+                            </li>
                             <li><a href="#">Islamic Courses</a></li>
                             <li><a href="#">Ijazah Course</a></li>
                         </ul>
