--- a/index.html
+++ b/index.html
@@ -130,3 +130,63 @@
             </div>
         </div>
     </div>
+
+        <!-- Footer Start -->
+  <footer class="footer">
+    <div class="container">
+        <div class="row">
+            <div class="footer-col">
+                <h4>Main Menu</h4>
+                <ul>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Pricing</a></li>
+                    <li><a href="#">Blog</a></li>
+                    <li><a href="#">Terms of service</a></li>
+                </ul>
+            </div>
+            <div class="footer-col">
+                <h4>Quran Courses</h4>
+                <ul>
+                    <li><a href="#">Quran Reading</a></li>
+                    <li><a href="#">Rules of Tajweed</a></li>
+                    <li><a href="#">Quran Memorization</a></li>
+                    <li><a href="#">Noorani Qaida</a></li>
+                    <li><a href="#">Noor Al Bayan</a></li>
+                </ul>
+            </div>
+            <div class="footer-col">
+                <h4>Other Courses</h4>
+                <ul>
+                    <li><a href="#">Classical Arabic</a></li>
+                    <li><a href="#">Arabic Alphabet</a></li>
+                    <li><a href="#">Islamic Studies</a></li>
+                    <li><a href="#">Ijazah</a></li>
+                </ul>
+            </div>
+         <div class="footer-col">
+             <h4>Get in touch</h4>
+             <ul>
+                 <li>500 Treat Ave, Suite 200 <br>
+                     San Francisco, CA 94110</li>
+                 <li><a href="#">+1 (302) 307-3240 (Support)</a></li>
+                 <li><a href="#">support@bequran.net</a></li>
+             </ul>
+         </div>
+        </div>
+        </div>
+     <div class="end-footer">
+         <div class="footer-col">
+             <a class="be" href="#">© 2023 BeQuran. All Rights Reserved.</a>
+         </div>
+            <div class="footer-col">
+             <!-- <h4>follow us</h4> -->
+             <div class="social-links">
+                 <a href="#"><i class="fab fa-facebook-f"></i></a>
+                 <a href="#"><i class="fab fa-twitter"></i></a>
+                 <a href="#"><i class="fab fa-instagram"></i></a>
+                 <a href="#"><i class="fab fa-linkedin-in"></i></a>
+             </div>
+     </div>
+    </div>
+</footer>
+<!-- Footer END -->
