--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                             <li><a href="#">Ijazah Course</a></li>
                         </ul>
                     </li>
-                    <li><a class="h" href="#Blog">Blog</a></li>
+                    <li><a class="h" href="https://turkyyassin.github.io/Blog/">Blog</a></li>
                     <li><a href="#More">More<span><i class="fa-solid fa-angle-down"></i></span></a>
                         <ul class="dropdown">
                             <li><a href="https://turkyyassin.github.io/About/">About</a></li>
@@ -138,9 +138,9 @@
             <div class="footer-col">
                 <h4>Main Menu</h4>
                 <ul>
-                    <li><a href="#">About</a></li>
+                    <li><a href="https://turkyyassin.github.io/About/">About</a></li>
                     <li><a href="#">Pricing</a></li>
-                    <li><a href="#">Blog</a></li>
+                    <li><a href="https://turkyyassin.github.io/Blog/">Blog</a></li>
                     <li><a href="#">Terms of service</a></li>
                 </ul>
             </div>
